crates/mako/src/tree_shaking/snapshots/mako__tree_shaking__tree_shaking_module__tests__used_export_test_1.snap
---
source: crates/mako/src/tree_shaking/tree_shaking_module.rs
expression: "&used"
---
[
    (
        0,
        {
            SwcIdent(
                "He#0",
            ),
        },
    ),
    (
        1,
        {},
    ),
    (
        3,
        {
            Default,
        },
    ),
]
