crates/mako/src/tree_shaking/snapshots/mako__tree_shaking__tree_shaking_module__tests__used_export_test_2.snap
---
source: crates/mako/src/tree_shaking/tree_shaking_module.rs
expression: "&used"
---
[
    (
        0,
        {
            SwcIdent(
                "first#0",
            ),
        },
    ),
    (
        1,
        {
            SwcIdent(
                "He#0",
            ),
        },
    ),
    (
        4,
        {},
    ),
    (
        5,
        {
            SwcIdent(
                "foo#0",
            ),
        },
    ),
    (
        6,
        {
            Default,
        },
    ),
]
