crates/mako/src/tree_shaking/snapshots/mako__tree_shaking__tree_shaking_module__tests__used_export_test_3.snap
---
source: crates/mako/src/tree_shaking/tree_shaking_module.rs
expression: "&used"
---
[
    (
        2,
        {
            Default,
        },
    ),
]
