crates/mako/src/tree_shaking/snapshots/mako__tree_shaking__tree_shaking_module__tests__used_export_test_5.snap
---
source: crates/mako/src/tree_shaking/tree_shaking_module.rs
expression: "&used"
---
[
    (
        0,
        {
            SwcIdent(
                "b#0",
            ),
        },
    ),
    (
        1,
        {
            SwcIdent(
                "a#0",
            ),
        },
    ),
]
